--- a/style.scss
+++ b/style.scss
@@ -56,6 +56,7 @@ main {
 
   h2{
     border-bottom: dashed;
+    background-color: rgb(41, 56, 69, 0.3);
     margin-top: 0;
     margin-bottom: 0;
     padding: 4px 0 4px 4px;
@@ -85,6 +86,12 @@ main {
   border-radius: 10px;
   transition: 0.4s;
 }
+
+.no-decoration {
+  width: 9em;
+  text-decoration: none;
+}
+
 
 .student-card:hover {
   transform: scale(1.05);
