--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,6 @@
 $h-font: 'PT Sans', sans-serif;
-$p-font: "Fira Sans", sans-serif;;
+$p-font: "Fira Sans", sans-serif;
+$note-font: "Itim", cursive;
 
 $h1-size: 46px;
 $p-size: 16px;
@@ -11,15 +12,15 @@ $orange: #f6b28dff;
 $red: #ec8394ff;
 $yellow: #fbff85ff;
 
-.orange-sticker {
-  background-color: $orange;
+.orange {
+  background: $orange;
 }
 
-.yellow-sticker {
+.yellow {
   background-color: $yellow;
 }
 
-.red-sticker {
+.red {
   background-color: $red;
 }
 
@@ -40,12 +41,13 @@ h2, h3 {
 
 h3 {
   border-bottom: dashed;
-  padding: 4px;
+  padding: .3em;
   margin: 0;
 }
 
 p {
-  padding: 4px 4px 0 4px;
+  padding: .3em;
+  padding-bottom: 0;
   margin: 0;
   font-family: $p-font;
   font-weight: 400;
@@ -57,6 +59,7 @@ body {
   margin: 0;
   padding: 0;
 }
+
 
 main {
   display: flex;
@@ -83,12 +86,23 @@ main {
 }
 
 #sticker-page {
+  display: flex;
   padding: 8px 8px 0px 8px;
 }
 
-.news-sticker {
- width: $news-card-size;
- height: $news-card-size;
+.sticker {
+  margin: 5px;
+  width: $news-card-size;
+  height: $news-card-size;
+  h3 {
+    font-family: $note-font;
+    border: none;
+    font-weight: 500;
+    background-color: rgb(0, 0, 0, 0.1);
+  }
+  p {
+    font-family: $note-font;
+  }
 //  border: solid;
 }
 
@@ -101,19 +115,20 @@ main {
 .student-card {
   width: 9em;
   height: $student-card-size;
-  border: solid;
   border-radius: 10px;
   transition: 0.4s;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 1px 1px 0px;
+}
+
+.student-card:hover {
+  transform: scale(1.05);
+  box-shadow: rgb(0, 0, 0, 0.3) 0px 12px 13px 1px;
 }
 
 .no-decoration {
   width: 9em;
   text-decoration: none;
 
-}
-
-.student-card:hover {
-  transform: scale(1.05);
 }
 
 .card-shadow {
