--- a/spebb/calculator/style.css
+++ b/spebb/calculator/style.css
@@ -70,6 +70,4 @@ body {
 .main-right button:last-child {
   color: #E5E5E6;
   background-color: #8F000A;
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
