--- a/style.css
+++ b/style.css
@@ -77,12 +77,13 @@ main {
 
 #student-flow {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   padding: 45px 0px 0px 0px;
 }
 
 .student-card {
   width: 9em;
+  margin-right: 1.5em;
   height: 7em;
   border: solid;
   border-radius: 10px;
@@ -92,6 +93,7 @@ main {
 .no-decoration {
   width: 9em;
   text-decoration: none;
+  color: #222222;
 }
 
 .student-card:hover {
