--- a/ingo/hangman/hangman.scss
+++ b/ingo/hangman/hangman.scss
@@ -16,7 +16,8 @@ header {
   align-items: center;
   height: 100px;
   h1 {
-
+    color: $bg;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
 }
 
@@ -27,7 +28,8 @@ main {
   justify-content: center;
   img {
     max-height: 300px;
-    width: auto;
+    width: 300px;
+    margin: auto;
   }
   #wordDisplay {
     display: flex;
@@ -37,11 +39,24 @@ main {
     background-color: $mddk;
     height: 75px;
 
+    button {
+      width: 100px;
+      height: 50px;
+      background-color: $lt;
+      border-radius: 7px;
+      font-size: xx-large;
+    }
+
     .letterContainer {
       width: 50px;
       height: 50px;
       background-color: $lt;
       border-radius: 7px;
+      text-align: center;
+      vertical-align: middle;
+      line-height: 50px;
+      font-size: xx-large;
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
     }
   }
