--- a/ingo/ingo.css
+++ b/ingo/ingo.css
@@ -1,5 +1,25 @@
-div {
-  width: 50px;
-  height: 50px;
-  background-color: blue;
+body {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+body header {
+  flex-grow: 1;
+}
+body main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 3;
+}
+body main div {
+  width: 200px;
+  height: 200px;
+  background-color: aliceblue;
+}
+body main div a {
+  line-height: 2em;
+}
+body footer {
+  flex-grow: 1;
 }/*# sourceMappingURL=ingo.css.map */
