--- a/ingo/ingo.scss
+++ b/ingo/ingo.scss
@@ -1,30 +1,36 @@
 body {
   height: 100vh;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 12;
+  grid-template-rows: 9;
 
   header {
-    flex-grow: 1;
   }
 
   main {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-grow: 3;
 
-    div {
+    .center-links {
       width: 200px;
       height: 200px;
       background-color: aliceblue;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
 
       a {
         line-height: 2em;
+      }
+
+      #back {
+        position: relative;
+        bottom: 0;
       }
     }
   }
 
   footer {
-    flex-grow: 1;
   }
 }
